# cura-p1s

./: LICENSE  NOTICE  README.md  bambox_p1s.def.json  pyproject.toml
src/cura_p1s/: __init__.py  cli.py  resolver.py
src/cura_p1s/data/: bambox_p1s.def.json  bambox_p1s_ams.def.json
tests/: test_cli.py  test_resolver.py
